env/app-amd64.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      imagePullSecrets:
      - name: ghrc-auth
      containers:
      - name: app
        image: ghcr.io/aopilatov/rnd_app:amd64-1.2
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"

---

apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
