env/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: volume-pg-claim
      containers:
      - name: postgres
        image: postgres:15.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: postgredb

---

apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
