env/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      volumes:
        - name: redisdb
          persistentVolumeClaim:
            claimName: volume-redis-claim
      containers:
      - name: redis
        image: redis:7.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6379
        resources:
          limits:
            memory: "512Mi"
            cpu: "100m"
        volumeMounts:
          - mountPath: /var/lib/redis/data
            name: redisdb

---

apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
